--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       # specify the version you desire here
       - image: circleci/python:3.6.1
 
-    working_directory: ~/projects/webapp-flask/
+    #working_directory: ~/projects/webapp-flask/
 
     steps:
       - checkout
