--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-      - run: docker build -t "$DOCKER_IMAGE_NAME".  # Build the docker image 
+      - run: docker build -t "$DOCKER_IMAGE_NAME":latestsample.  # Build the docker image 
       - run: echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin    
       - run: docker push "$DOCKER_IMAGE_NAME":latestsample # push the docker image to hub
-      - run: docker run -d -p 5000:5000 DOCKER_IMAGE_NAME:latestsample hellopythonworld app.py
+      - run: docker run -d -p 5000:5000 "$DOCKER_IMAGE_NAME":latestsample hellopythonworld app.py
       - run: curl http://localhost:5000
